--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ plugins:
 
 # Site settings
 url: 'https://squarerootofpi.github.io/'
-baseurl: '/template-blog-individual'
+baseurl: '/dnd-resources'
 title: 'My website'
 description: 'This is my new website'
 permalink: pretty
